# msx-serial

./: .coverage  .coverage.macmini.lan.3823.XaXwIeNx  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  debug_parse.py  pyproject.toml  update_readme_version.py
.github/workflows/: ci.yml  release.yml
docs/: AI_CONTRIBUTION.md  CHANGELOG.md  DEVELOPMENT.md  USAGE.md
msx_serial/: __init__.py  __main__.py  _version.py  commands.yml  console.py  iot_nodes.py  modes.py  msx_serial.py  terminal.py  upload.py
msx_serial/commands/: __init__.py  command_types.py  handler.py  performance_commands.py
msx_serial/common/: __init__.py  cache_manager.py  color_output.py  config_manager.py  profiler.py
msx_serial/completion/: basic_filesystem.py  command_completer.py  dos_filesystem.py  iot_loader.py  keyword_loader.py  loader_iot_nodes.py  loader_keyword.py  msx0.py
msx_serial/completion/completers/: __init__.py  base.py  basic_completer.py  command_completer.py  dos_completer.py  help_completer.py  iot_completer.py  special_completer.py
msx_serial/connection/: base.py  config_factory.py  connection.py  dummy.py  manager.py  serial.py  telnet.py  uri_parser.py
msx_serial/core/: __init__.py  data_processor.py  msx_session.py  optimized_session.py  terminal_session.py
msx_serial/data/: __init__.py  dos_commands.yml  iot_basic_nodes.yml  msx_keywords.yml
msx_serial/display/: __init__.py  basic_display.py  enhanced_display.py  fast_output.py  optimized_display.py
msx_serial/input/: commands.py  user_input.py
msx_serial/io/: __init__.py  data_sender.py  input_session.py  user_interface.py
msx_serial/man/: ABS.3  AND.3  ASC.3  ATN.3  AUTO.3  BASE.3  BEEP.3  BIN$.3  BLOAD(1).3  BLOAD(2).3  BSAVE(1).3  BSAVE(2).3  CALL AKCNV.3  CALL ANK.3  CALL BGM.3  CALL CHDIR.3  CALL CHDRV.3  CALL CLS.3  CALL FORMAT.3  CALL JIS.3  CALL KACNV.3  CALL KANJI.3  CALL KEXT.3  CALL KINSTR.3  CALL KLEN.3  CALL KMID.3  CALL KNJ.3  CALL KTYPE.3  CALL MEMINI.3  CALL MFILES.3  CALL MKDIR.3  CALL MKILL.3  CALL MNAME.3  CALL MUSIC.3  CALL PALETTE.3  CALL PAUSE.3  CALL PCMPLAY.3  CALL PCMREC.3  CALL PITCH.3  CALL PLAY.3  (+204 more)
msx_serial/protocol/: __init__.py  msx_detector.py
msx_serial/transfer/: basic_sender.py  file_manager.py  file_transfer.py  upload.bas
msx_serial/ui/: color_output.py
msx_serial/util/: loader_keyword.py
msx_serial/utils/: __init__.py
scripts/: release.py
tests/: README.md  __init__.py  test_basic_completer.py  test_basic_filesystem.py  test_basic_sender.py  test_cache_manager.py  test_color_output.py  test_command_completer_extended.py  test_commands.py  test_completion.py  test_config_factory.py  test_config_manager.py  test_connection_integration.py  test_data_processor.py  test_data_sender.py  test_display.py  test_dos_filesystem.py  test_enhanced_display.py  test_file_manager.py  test_file_transfer_simple.py  test_help_completer.py  test_init.py  test_input_session.py  test_iot_completer_extended.py  test_keyword_loader.py  test_main.py  test_mode_switching.py  test_msx_session.py  test_optimized_display.py  test_optimized_session.py  test_performance_commands.py  test_profiler.py  test_protocol.py  test_serial_connection.py  test_special_completer.py  test_telnet_connection.py  test_terminal_dummy.py  test_uri_parser.py  test_user_interface.py  test_version.py
